--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -6,7 +6,7 @@
 var items = [
     {% for i in items %}
     { {% for f in fields %}{% if i[f.field] %}{{ f.field | escape | jsonify }}:{{ i[f.field] | strip | jsonify }}, {%- endif -%}{%- endfor -%}
-        {% if i.image_thumb %}"img": {{ i.image_thumb | relative_url | jsonify }}, {%- endif -%} 
+        {% if i.image_thumb %}"img": {{ i.image_thumb | relative_url | jsonify }}, {%- endif -%}
         {% if i.display_template %}"template": {{ i.display_template | jsonify }}, {%- endif -%}
         {% if i.format %}"format": {{ i.format | jsonify }}, {%- endif -%}
         "title":{{ i.title | strip | escape | jsonify }}, "id":{{ i.objectid | jsonify }} }{% unless forloop.last %},{% endunless %}{%- endfor -%}
@@ -14,7 +14,7 @@ var items = [
 
 {% include js/get-icon.js %}
 
-/* function to create cards for each item */ 
+/* function to create cards for each item */
 function makeCard(obj) {
     // placeholder image for lazyload
     var placeholder = "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 3 2'%3E%3C/svg%3E";
@@ -62,8 +62,8 @@ function makeCard(obj) {
     {% endunless %}{% endfor %}
     card += '</p>';
     // media type
-    if(obj.format && obj.format != "") {
-        card += '<p class="card-text"><small><a class="btn btn-sm btn-outline-secondary" href="{{ "/browse.html" | relative_url }}#' + encodeURIComponent(obj.format) + '">' + 
+    /*if(obj.format && obj.format != "") {
+        card += '<p class="card-text"><small><a class="btn btn-sm btn-outline-secondary" href="{{ "/browse.html" | relative_url }}#' + encodeURIComponent(obj.format) + '">' +
         obj.format.split("/").pop().toUpperCase() + ' <svg class="bi icon-sprite"><use xlink:href="{{ "/assets/lib/cb-icons.svg" | relative_url }}#';
         if(obj.format.includes('image')){
             card += 'icon-image';
@@ -77,9 +77,9 @@ function makeCard(obj) {
             card += 'icon-default';
         }
         card += '"/></svg></a></small></p>';
-    }
+    }*/
     // view button
-    card += '<hr><a href="' + itemHref + '" class="btn btn-sm btn-light" title="link to ' + obj.title + '">View Full Record</a>';
+    card += '<hr><a href="' + itemHref + '" class="btn btn-sm btn-light" title="link to ' + obj.title + '">View Details</a>';
     // close divs
     card += '</div></div></div>';
     // send back big string
@@ -90,11 +90,11 @@ function makeCard(obj) {
 function filterItems(arr,q) {
     // show loading icon
     loadingIcon.classList.remove("d-none");
-    // dont filter if no q 
-    if (q=="") { 
-        var filteredItems = arr; 
+    // dont filter if no q
+    if (q=="") {
+        var filteredItems = arr;
     } else {
-        q = q.trim().toUpperCase(); 
+        q = q.trim().toUpperCase();
         // js indexOf filter
         var filteredItems = [];
         for (var i = 0, len = arr.length; i < len; i++) {
@@ -105,9 +105,9 @@ function filterItems(arr,q) {
             }
         }
     }
-    // add number 
+    // add number
     document.querySelector("#numberOf").innerHTML = filteredItems.length + " of {{ items | size }} items";
-    
+
     // add stuff, make cards first in giant var, then add all at once to speed things up
     var cards = "";
     for (var i = 0, len = filteredItems.length; i < len; i++) {
@@ -137,7 +137,7 @@ function shuffle(array) {
 /* randomize items once at page load */
 shuffle(items);
 
-/* set some elements */ 
+/* set some elements */
 var loadingIcon = document.querySelector("#loadingIcon");
 var filterTextBox = document.querySelector('#filterTextBox');
 var filterButton = document.querySelector("#filterButton");
@@ -159,14 +159,14 @@ function submitFilter() {
     query = filterTextBox.value;
     window.location.hash = encodeURIComponent(query);
 }
-/* reset filters */ 
+/* reset filters */
 function resetFilter() {
     query = "";
     filterTextBox.value = query;
     window.location.hash = encodeURIComponent(query);
 }
 
-/* filter if hash changes */ 
+/* filter if hash changes */
 window.addEventListener("hashchange", function() {
     // read hash
     query = decodeURIComponent(location.hash.substr(1));
@@ -211,6 +211,6 @@ sortOptions.forEach((button) => {
         filterItems(items, query);
     }
   });
-}); 
+});
 
 </script>
