--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,4 +1,34 @@
-/* 
-    Put your custom SCSS here! 
+/*
+    Put your custom SCSS here!
     This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
 */
+:root {
+  --bs-body-color: #aaa;
+}
+
+main {
+  background-color: #000;
+}
+
+.h2, h2 {
+  color: #ccc;
+}
+
+.display-4 {
+  color: #000;
+}
+
+.my-4 {
+    background-color: #333;
+    border-radius: 5px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+}
+
+.breadcrumb-item+.breadcrumb-item::before {
+  color: #000;
+}
+
+div.spotlight.gallery-img {
+  color: #333;
+}
