--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -18,6 +18,10 @@ main {
   color: #000;
 }
 
+.py-3 {
+  background-color: #333;
+}
+
 .my-4 {
     background-color: #333;
     border-radius: 5px;
