theme color adjustments

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -36,3 +36,7 @@ main {
 div.spotlight.gallery-img {
   color: #333;
 }
+
+#cloud-div-subject-tags {
+  background-color: rgba(var(--bs-light-rgb),var(--bs-bg-opacity))!important;
+}
