--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -10,9 +10,9 @@ custom-foot: js/browse-js.html
     <div class="col-md-8 text-center">
         <form role="search" id="lunrSearch" onsubmit="submitFilter(); return false;">
             <div class="input-group input-group-lg">
-                <input type="text" class="form-control" id="filterTextBox" placeholder="Filter ... " aria-label="Search"> 
+                <input type="text" class="form-control" id="filterTextBox" placeholder="Filter ... " aria-label="Search">
                 <button class="btn btn-success" type="submit" title="Filter items" alt="Search" id="filterButton" >Search</button>
-                <button class="btn btn-outline-secondary filter" onclick="resetFilter(); return false;" data-filter="">Reset</button>
+                <button class="btn btn-outline-danger filter" onclick="resetFilter(); return false;" data-filter="">Reset</button>
             </div>
         </form>
         <div class="h2" id="numberOf"></div>
