updated logo size in css removed captions from features images in about page

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -40,3 +40,11 @@ div.spotlight.gallery-img {
 #cloud-div-subject-tags {
   background-color: rgba(var(--bs-light-rgb),var(--bs-bg-opacity))!important;
 }
+
+#home-banner-logo {
+    height: 100px;
+}
+
+#footer-logo {
+    height: 100px;
+}
